# solvault-optimizer

./: .gitignore  Anchor.toml  CLAUDE.md  README.md  package-lock.json  package.json
frontend/: index.html
frontend/src/: index.css
frontend/src/components/icons/: ProtocolIcons.tsx
frontend/src/components/landing/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Integrations.tsx  Navbar.tsx  Security.tsx  StatsBar.tsx
frontend/src/pages/: AppDashboard.tsx  Index.tsx
programs/solvault/: Cargo.toml
programs/solvault/src/: errors.rs  lib.rs  state.rs
programs/solvault/src/instructions/: close_position.rs  collect_fees.rs  deposit.rs  initialize.rs  mod.rs  rebalance.rs  transfer_authority.rs  update_allocations.rs  update_config.rs  withdraw.rs
src/: index.css
src/components/landing/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Integrations.tsx  Navbar.tsx  Security.tsx
src/pages/: AppDashboard.tsx  Index.tsx
tests/: solvault.ts
